@@ -1,3 +1,13 @@
+2021-07-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version and date
+
+2021-06-23  Jeroen Ooms  <jeroenooms@gmail.com>
+
+	* tools/winlibs.R: Update to GSL 2.7 and support UCRT build
+	* src/Makevars.win: Update to GSL 2.7
+	* src/Makevars.ucrt: Support UCRT build
+
 2021-05-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (URL, BugReports): Added links
